# QP-solver

./: .gitignore  README.md  app.json  package-lock.json  package.json  plan.md  requirements.txt  tailwind.config.js
app/: _layout.tsx  change-password.tsx  plans.tsx  solver-tips.tsx
backend/: requirements.txt
backend-fast-api/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.py
backend-fast-api/backend/alembic/: env.py
backend-fast-api/backend/alembic/versions/: 238081fb30fb_add_updated_at_column_to_users_table.py  496cd5ffc522_add_missing_columns_to_users_table.py  cbe9a2810e00_populate_and_set_updated_at_to_not_null.py
backend-fast-api/backend/app/: main.py
backend-fast-api/backend/app/api/: __init__.py  dependencies.py  models.py  schemas.py
backend-fast-api/backend/app/api/endpoints/: auth.py  billing_plan.py  history.py  payment.py  pdf_process.py
backend-fast-api/backend/app/core/: auth.py  config.py  exceptions.py  security.py
backend-fast-api/backend/app/db/: base.py  base_class.py  database.py  session.py
backend-fast-api/backend/app/models/: billing.py  history.py  pdf.py  user.py
backend-fast-api/backend/app/repositories/: auth_repository.py  billing_repository.py
backend-fast-api/backend/app/schemas/: __init__.py  billing.py  history.py  user.py
backend-fast-api/backend/app/services/: auth_service.py  billing_service.py
backend-fast-api/backend/script/: init_db.py
backend-fast-api/backend/websocket-demo/: README.md  debugging-guide.md  generate_token.py  index.html  script.js  styles.css
(+25 files in other folders)
